// Copyright (c) 2024 - Restate Software, Inc., Restate GmbH
//
// This file is part of the Restate service protocol, which is
// released under the MIT license.
//
// You can find a copy of the license in file LICENSE in the root
// directory of this repository or package, or at
// https://github.com/restatedev/proto/blob/main/LICENSE

syntax = "proto3";

import "google/protobuf/empty.proto";

package dev.restate.metadata;

service MetadataSvc {
  // Fetch the current schema information
  rpc FetchSchemas(FetchSchemasRequest) returns (FetchSchemasResponse);
}

message FetchSchemasRequest {
  // provide schema version information
}

message FetchSchemasResponse {
  // todo: Replace with proper protobuf
  bytes schemas_bin = 1;
}